[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pairing_bn256 = { git = "https://github.com/privacy-scaling-explorations/pairing"}
#num-bigint = { version = "0.4", features = ["rand"] }
poseidon = { git = "https://github.com/Janmajayamall/poseidon" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = 'v0.2.0' }
